k8s/init.yaml
apiVersion: v1
kind: Pod
metadata:
  name: caliman-init
spec:
  containers:
  - name: caliman-app
    image: caliman-app:local
    ports:
    - containerPort: 8080
