k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: caliman-service
  namespace: caliman
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: caliman
  ports:
    - name: http
      port: 80
      targetPort: http
