k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: caliman
  namespace: caliman
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - caliman.local
      secretName: caliman-tls
  rules:
    - host: caliman.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: caliman-service
                port:
                  number: 80
